Ensure embed code message and no events message don't overlap

--- a/src/components/editor/noEventsMessage/style.scss
+++ b/src/components/editor/noEventsMessage/style.scss
@@ -4,7 +4,7 @@
     background:#DA4167;
     text-align:center;
     padding:10px;
-    position: absolute;
+    display: block;
     border-radius:2px;
     top: 20px;
     width: 100%;
